tests/fail/fail_import_not_supported.kr
inpristan "std";

fn inisiu() {
    mostran("unused");
}
